# roll-op

./: .gitignore  LICENSE  Makefile  README.md  account_abstraction.py  ansible.py  argparsext.py  block_explorer.py  bridge.py  bundler.py  config.py  config.toml.example  deploy_config.py  deploy_config_templates.py  deps.py  devenv.sh  exithooks.py  funding.json  genesis.py  hildr_engine.py  hildr_node.py  l1.py  l2.py  l2_batcher.py  l2_deploy.py  l2_engine.py  l2_execution.py  l2_node.py  l2_proposer.py  libroll.py  logrotate.py  makefile  op_geth.py  paths.py  processes.py  pyproject.toml  roll.py  rollop  ruff.toml  server.py  (+3 more)
.github/workflows/: build.yml
ansible/: ansible.cfg
ansible/playbooks/: rollop.yml
ansible/playbooks/roles/rollop/defaults/: main.yml
argparsing/: __init__.py  argparser.py  newline_formatter.py
cli/: main.py
config/: __init__.py  account_abstraction.py  accounts_keys.py  config.py  devnet_l1.py  examples.py  explorer.py  governance.py  l1_contracts_deploy.py  l2_batcher.py  l2_deploy.py  l2_engine.py  l2_node.py  l2_proposer.py  logs.py  network.py  paths.py
docs/: README.md  logging.md  opstack.md  port-config.md  testing.md  vocabulary.md
libroll/: __init__.py  cmd.py  exceptions.py  libroll.py  streams.py
paymaster/: .env  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
paymaster/script/: deposit.ts
paymaster/src/: abis.ts  config.ts  rpcMethods.ts  server.ts
paymaster/test/: tests.ts
roll_op/cli/: main.py
roll_op/confgen/: __init__.py  main.py
scripts/: install.sh
(+7 files in other folders)
