[tool.poetry]
name = "simple-op-stack-rollup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cli"}]

[tool.poetry.scripts]
roll-op = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
